--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   </head>
   <body>
     <header>
+      <input type="checkbox" name="" id="toggler" />
+      <label for="toggler" class="fas fa-bars"></label>
+
       <a href="#" class="logo">flower.</a>
       <nav class="navbar">
         <a href="#home">home</a>
