Improve responsive navigation bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <header>
-      <input type="checkbox" name="" id="toggler" />
+      <input type="checkbox" id="toggler" />
       <label for="toggler" class="fas fa-bars"></label>
 
       <a href="#" class="logo">flower.</a>
