Background video and text

--- a/index.html
+++ b/index.html
@@ -30,5 +30,23 @@
         <a href="#" class="fas fa-user"></a>
       </div>
     </header>
+    <!--home section starts-->
+    <section class="home" id="home">
+      <div class="content">
+        <video autoplay loop muted plays-inline>
+          <source src="assets/Video.mp4" type="video/mp4" />
+        </video>
+        <h1>Fresh Flowers</h1>
+        <span>natural and beautiful flowers</span>
+        <p>
+          Choose from a stunning collection of fresh, handcrafted bouquets for
+          any occasion. With seamless online ordering and reliable delivery, you
+          can send love and joy with just a few clicks. Brighten someone's day
+          with the perfect floral arrangement, delivered with care.
+        </p>
+        <a href="#" class="btn">Shop Now</a>
+      </div>
+    </section>
+    <!--home section ends-->
   </body>
 </html>
