--- a/index.html
+++ b/index.html
@@ -48,5 +48,22 @@
       </div>
     </section>
     <!--home section ends-->
+    <!-- about section start -->
+    <section class="about" id="about">
+      <h1 class="heading"><span>about</span> US</h1>
+      <div class="row">
+        <div class="video-container">
+          <video src="assets/Video2.mp4" loop autoplay muted></video>
+          <h3>best flower seller</h3>
+        </div>
+        <div class="content">
+          <h3>why choose us?</h3>
+          <p>..........</p>
+          <p>////////////////</p>
+          <a href="#" class="btn">learn more</a>
+        </div>
+      </div>
+    </section>
+    <!-- about section ends -->
   </body>
 </html>
