--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input type="checkbox" id="toggler" />
       <label for="toggler" class="fas fa-bars"></label>
 
-      <a href="#" class="logo">flower.</a>
+      <a href="#" class="logo">fLORAA</a>
       <nav class="navbar">
         <a href="#home">home</a>
         <a href="#about">about</a>
@@ -36,7 +36,7 @@
         <video autoplay loop muted plays-inline>
           <source src="assets/Video.mp4" type="video/mp4" />
         </video>
-        <h1>Fresh Flowers</h1>
+        <h1>Happiness is Fresh Flowers</h1>
         <span>natural and beautiful flowers</span>
         <p>
           Choose from a stunning collection of fresh, handcrafted bouquets for
